--- a/manifests/postgresql.crd.yaml
+++ b/manifests/postgresql.crd.yaml
@@ -152,6 +152,8 @@ spec:
               type: boolean
             enableLogicalBackup:
               type: boolean
+            disableWALArchiving:
+              type: boolean
             enableMasterLoadBalancer:
               type: boolean
             enableReplicaLoadBalancer:
