Changed config name to enableWALArchiving

--- a/charts/postgres-operator/crds/postgresqls.yaml
+++ b/charts/postgres-operator/crds/postgresqls.yaml
@@ -188,6 +188,8 @@ spec:
               type: boolean
             enableLogicalBackup:
               type: boolean
+            enableWALArchiving:
+              type: boolean
             enableMasterLoadBalancer:
               type: boolean
             enableReplicaLoadBalancer:
