--- a/manifests/postgresql.crd.yaml
+++ b/manifests/postgresql.crd.yaml
@@ -152,7 +152,7 @@ spec:
               type: boolean
             enableLogicalBackup:
               type: boolean
-            disableWALArchiving:
+            enableWALArchiving:
               type: boolean
             enableMasterLoadBalancer:
               type: boolean
